--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "topics/vim/.vim.symlink/bundle/molokai"]
 	path = topics/vim/.vim.symlink/bundle/molokai
 	url = https://github.com/tomasr/molokai
+[submodule "topics/oh-my-zsh/oh-my-zsh"]
+	path = topics/oh-my-zsh/oh-my-zsh
+	url = https://github.com/robbyrussell/oh-my-zsh
