[architecture] flatten setup

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,30 +1,30 @@
-[submodule "topics/vim/.vim.symlink/bundle/nerdtree"]
-	path = topics/vim/.vim.symlink/bundle/nerdtree
+[submodule "vim/.vim.symlink/bundle/nerdtree"]
+	path = vim/.vim.symlink/bundle/nerdtree
 	url = https://github.com/scrooloose/nerdtree
-[submodule "topics/vim/.vim.symlink/bundle/ctrlp.vim"]
-	path = topics/vim/.vim.symlink/bundle/ctrlp.vim
+[submodule "vim/.vim.symlink/bundle/ctrlp.vim"]
+	path = vim/.vim.symlink/bundle/ctrlp.vim
 	url = https://github.com/kien/ctrlp.vim
-[submodule "topics/vim/.vim.symlink/bundle/vim-colors-solarized"]
-	path = topics/vim/.vim.symlink/bundle/vim-colors-solarized
+[submodule "vim/.vim.symlink/bundle/vim-colors-solarized"]
+	path = vim/.vim.symlink/bundle/vim-colors-solarized
 	url = https://github.com/altercation/vim-colors-solarized
-[submodule "topics/vim/.vim.symlink/bundle/vim-gitgutter"]
-	path = topics/vim/.vim.symlink/bundle/vim-gitgutter
+[submodule "vim/.vim.symlink/bundle/vim-gitgutter"]
+	path = vim/.vim.symlink/bundle/vim-gitgutter
 	url = https://github.com/airblade/vim-gitgutter
-[submodule "topics/vim/.vim.symlink/bundle/syntastic"]
-	path = topics/vim/.vim.symlink/bundle/syntastic
+[submodule "vim/.vim.symlink/bundle/syntastic"]
+	path = vim/.vim.symlink/bundle/syntastic
 	url = https://github.com/scrooloose/syntastic
-[submodule "topics/vim/.vim.symlink/bundle/vim-sensible"]
-	path = topics/vim/.vim.symlink/bundle/vim-sensible
+[submodule "vim/.vim.symlink/bundle/vim-sensible"]
+	path = vim/.vim.symlink/bundle/vim-sensible
 	url = https://github.com/tpope/vim-sensible
-[submodule "topics/vim/.vim.symlink/bundle/vim-airline"]
-	path = topics/vim/.vim.symlink/bundle/vim-airline
+[submodule "vim/.vim.symlink/bundle/vim-airline"]
+	path = vim/.vim.symlink/bundle/vim-airline
 	url = https://github.com/bling/vim-airline
-[submodule "topics/vim/.vim.symlink/bundle/vim-multiple-cursors"]
-	path = topics/vim/.vim.symlink/bundle/vim-multiple-cursors
+[submodule "vim/.vim.symlink/bundle/vim-multiple-cursors"]
+	path = vim/.vim.symlink/bundle/vim-multiple-cursors
 	url = https://github.com/terryma/vim-multiple-cursors
-[submodule "topics/vim/.vim.symlink/bundle/molokai"]
-	path = topics/vim/.vim.symlink/bundle/molokai
+[submodule "vim/.vim.symlink/bundle/molokai"]
+	path = vim/.vim.symlink/bundle/molokai
 	url = https://github.com/tomasr/molokai
-[submodule "topics/oh-my-zsh/oh-my-zsh"]
-	path = topics/oh-my-zsh/oh-my-zsh
+[submodule "oh-my-zsh/oh-my-zsh"]
+	path = oh-my-zsh/oh-my-zsh
 	url = https://github.com/robbyrussell/oh-my-zsh
