--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "oh-my-zsh/oh-my-zsh"]
 	path = oh-my-zsh/oh-my-zsh
 	url = https://github.com/robbyrussell/oh-my-zsh
+[submodule "vim/.vim.symlink/bundle/ctrlsf.vim"]
+	path = vim/.vim.symlink/bundle/ctrlsf.vim
+	url = https://github.com/dyng/ctrlsf.vim
